--- a/npkpir_23/web/ksiegowaFK/ksiegowaFKKartoteki.xhtml
+++ b/npkpir_23/web/ksiegowaFK/ksiegowaFKKartoteki.xhtml
@@ -40,6 +40,7 @@
                     <ui:include src="sub/dialog/dialog_wykazkursow_reczne.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kliencifk_dolaczanie.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kliencifk_lista.xhtml"/>
+                    <ui:include src="sub/dialog/dialog_kontrahencifaktury.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kontrahenci_lista.xhtml"/>
                     <ui:include src="sub/dialog/dialog_kontrahenci_import.xhtml"/>
                     <ui:include src="sub/dialog/dialog_miejscakosztow_dolaczanie.xhtml"/>
