--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kontrahencifaktury.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_kontrahencifaktury.xhtml
@@ -9,7 +9,7 @@
     <p:dialog id="dialog_kontrahencifaktury" header="Przyporządkowanie klientów do kont - lista" widgetVar="dialog_kontrahencifaktury" 
               resizable="false"  onShow="ustawdialog('dialog_kontrahencifaktury','menukartoteki',1500,800);" closeOnEscape="true" onHide="resetujdialog('dialog_kontrahencifaktury');" >
         <h:form id="kliencifakturyformLista">
-             <p:panelGrid layout="tabular" columns="6" style="margin-top: 5px;">
+             <p:panelGrid layout="tabular" columns="8" style="margin-top: 5px;">
                         <h:outputText value="data od" style="font-weight: bold;"/>
                         <p:inputMask value="#{kliencifakturyView.dataod}" size="10" maxlength="10"  mask="9999-99-99"  validatorMessage="Błędnie wpisana data. Sprawdź. rrrr-mm-dd">
                             <f:validateRegex pattern="^(\d{4})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])$"/>
@@ -18,6 +18,10 @@
                         <p:inputMask value="#{kliencifakturyView.datado}" size="10" maxlength="10"  mask="9999-99-99" validatorMessage="Błędnie wpisana data. Sprawdź. rrrr-mm-dd">
                             <f:validateRegex pattern="^(\d{4})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])$"/>
                         </p:inputMask>
+                          <h:outputText value="podwykonawcy Niemcy"/>
+                        <p:selectBooleanCheckbox value="#{kliencifakturyView.podwykonawcyniemcy}">
+                            <p:ajax event="change" partialSubmit="true"/>
+                        </p:selectBooleanCheckbox>
                         <h:outputText value="niemieckie nagłówki"/>
                         <p:selectBooleanCheckbox value="#{kliencifakturyView.niemieckienaglowki}">
                             <p:ajax event="change" partialSubmit="true"/>
@@ -56,7 +60,7 @@
                 <p:column headerText="data do" filterBy="#{item.datado}" filterMatchMode="startsWith" style="width: 80px;"  exportable="true">
                     <h:outputText value="#{item.datado}"/>
                 </p:column>
-                <p:column headerText="wartość" filterBy="#{item.sumadokumentow}" filterMatchMode="startsWith" style="width: 80px;"  exportable="true">
+                <p:column headerText="wartość" sortBy="#{item.sumadokumentow}" filterBy="#{item.sumadokumentow}" filterMatchMode="startsWith" style="width: 80px;"  exportable="true">
                     <bcf:outputwal value="#{item.sumadokumentow}"/>
                 </p:column>
 <!--                <p:column headerText="edytuj" style="text-align: center; width: 70px;"  exportable="false">
