--- a/npkpir_23/web/ksiegowaFK/sub/podstrony/firma/edit_firma.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/podstrony/firma/edit_firma.xhtml
@@ -25,6 +25,7 @@
         <ui:include src="../../../../ksiegowa/sub/podatnikust/dodatkidrobiazgi.xhtml"/>
         <ui:include src="../../../../ksiegowa/sub/podatnikust/sprzedazewidencja.xhtml"/>
         <ui:include src="../../../../ksiegowa/sub/podatnikust/automatyzacja.xhtml"/>
+        <ui:include src="../../../../ksiegowa/sub/podatnikust/niemcy.xhtml"/>
     </p:tabView>
     <p:panelGrid layout="tabular" columns="1" style="padding: 10px;" rendered="#{podatnikView.selected.datawprowadzenia ne null}">
         <h:outputText value="ostatnia zmiana - #{podatnikView.selected.wprowadzil.toStringLIN()}"/>
