--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_wpisywanie.xhtml
@@ -451,7 +451,7 @@
                     <p:panelGrid layout="tabular" id="panelzewidencjavat" columns="1"  styleClass="uipanelGrid0" style="width: 620px;">
                         <h:outputText value="tylko ewidencja vat z podatkiem należnym" style="color: blue;" rendered="#{dokfkView.selected.rodzajedok.tylkovatnalezny}"/>
                         <p:dataTable lazy="false"  id="tablicavat" value="#{dokfkView.selected.ewidencjaVAT}" var="item" emptyMessage="nie ma zapisów w ewidencji vat"
-                                     style="margin-top: 0px;" rendered="#{dokfkView.selected.rodzajedok.kategoriadokumentu == 1 || dokfkView.selected.rodzajedok.kategoriadokumentu == 2}"
+                                     style="margin-top: 0px;" rendered="#{dokfkView.selected.rodzajedok.kategoriadokumentu == 1 or dokfkView.selected.rodzajedok.kategoriadokumentu == 2 or (dokfkView.selected.rodzajedok.kategoriadokumentu == 0 and WpisView.podatnikObiekt.niemcy)}"
                                      styleClass="gridvat" rowIndexVar="rowindex">
 <!--                            <p:column headerText="" width="5">
                                 <h:outputText value="#{item.lp+1}" styleClass="lpwierszavat"/>
