--- a/npkpir_23/web/wspolny/sub/podwykonawcy.xhtml
+++ b/npkpir_23/web/wspolny/sub/podwykonawcy.xhtml
@@ -10,7 +10,7 @@
     <div class="vertical-container">
        
         <h:form id="kliencifakturyformLista">
-             <p:panelGrid layout="tabular" columns="6" style="margin-top: 5px;">
+             <p:panelGrid layout="tabular" columns="8" style="margin-top: 5px;">
                         <h:outputText value="data od" style="font-weight: bold;"/>
                         <p:inputMask value="#{kliencifakturyView.dataod}" size="10" maxlength="10"  mask="9999-99-99"  validatorMessage="Błędnie wpisana data. Sprawdź. rrrr-mm-dd">
                             <f:validateRegex pattern="^(\d{4})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])$"/>
@@ -19,6 +19,10 @@
                         <p:inputMask value="#{kliencifakturyView.datado}" size="10" maxlength="10"  mask="9999-99-99" validatorMessage="Błędnie wpisana data. Sprawdź. rrrr-mm-dd">
                             <f:validateRegex pattern="^(\d{4})-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])$"/>
                         </p:inputMask>
+                          <h:outputText value="podwykonawcy Niemcy"/>
+                        <p:selectBooleanCheckbox value="#{kliencifakturyView.podwykonawcyniemcy}">
+                            <p:ajax event="change" partialSubmit="true"/>
+                        </p:selectBooleanCheckbox>
                         <h:outputText value="niemieckie nagłówki"/>
                         <p:selectBooleanCheckbox value="#{kliencifakturyView.niemieckienaglowki}">
                             <p:ajax event="change" partialSubmit="true"/>
