--- a/npkpir_23/web/admin/sub/tablica.xhtml
+++ b/npkpir_23/web/admin/sub/tablica.xhtml
@@ -57,7 +57,7 @@
                         <h:outputText value="#{wpis.uprawnienia}" />
                     </f:facet>
                     <f:facet name="input">  
-                        <h:selectOneMenu value="#{wpis.uprawnienia}" valueChangeListener="#{UzView.edit}">
+                        <h:selectOneMenu value="#{wpis.uprawnienia}" valueChangeListener="#{UzView.edytuj(wpis)}">
                             <f:selectItem itemValue="" itemLabel="wybierz" noSelectionOption="true"/>
                             <f:selectItems value="#{uprawnienia.listaUprawnien}"/>
                         </h:selectOneMenu>
@@ -70,7 +70,7 @@
                         <h:outputText value="#{wpis.nrtelefonu}" />
                     </f:facet>
                     <f:facet name="input">  
-                        <p:inputText value="#{wpis.nrtelefonu}" valueChangeListener="#{UzView.edit}"/>
+                        <p:inputText value="#{wpis.nrtelefonu}" valueChangeListener="#{UzView.edytuj(wpis)}"/>
                     </f:facet>
                 </p:cellEditor>
             </p:column>
@@ -90,7 +90,7 @@
                         <h:outputText value="#{wpis.email}" />
                     </f:facet>
                     <f:facet name="input">  
-                        <p:inputText value="#{wpis.email}" valueChangeListener="#{UzView.edit}"/>
+                        <p:inputText value="#{wpis.email}" valueChangeListener="#{UzView.edytuj(wpis)}"/>
                     </f:facet>
                 </p:cellEditor>
             </p:column>
