--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -116,18 +116,22 @@
                           >
                     <h:outputText value="#{wpis.opisFaktury}" style="#{wpis.pozycjepokorekcie.size() > 0 ? 'color:red;' : null}; line-break: loose;word-break: break-all;word-wrap: break-word !important;"/>
                 </p:column>
+                <p:column styleClass="zam." headerText="zam." filterBy="#{wpis.numerzamowienia}" filterMatchMode="contains"  width="100" 
+                          >
+                    <h:outputText value="#{wpis.numerzamowienia}" style="#{wpis.pozycjepokorekcie.size() > 0 ? 'color:red;' : null}; line-break: loose;word-break: break-all;word-wrap: break-word !important;"/>
+                </p:column>
                 <p:column styleClass="data1" headerText="data wyst." sortBy="#{wpis.datawystawienia}" filterBy="#{wpis.datawystawienia}" 
-                          filterMatchMode="contains"  width="60">
+                          filterMatchMode="contains"  width="70">
                     <h:outputText value="#{wpis.datawystawienia.substring(2)}"/>
                 </p:column>
                 <p:column styleClass="data1" headerText="termin płatności" sortBy="#{wpis.terminzaplaty}" filterBy="#{wpis.terminzaplaty}" 
-                          filterMatchMode="contains"  width="60">
+                          filterMatchMode="contains"  width="70">
                     <h:outputText value="#{wpis.terminzaplaty.substring(2)}"/>
                 </p:column>
-                <p:column styleClass="data2 hide-on-small" headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains"   width="70" >
+<!--                <p:column styleClass="data2 hide-on-small" headerText="netto"  sortBy="#{wpis.nettoFakturaView}" filterBy="#{wpis.nettoFakturaView}" filterMatchMode="contains"   width="70" >
                     <bcf:outputpl value="#{wpis.nettoFakturaView}"/>
                     <h:outputText value=" #{wpis.walutafaktury}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
-                </p:column>
+                </p:column>-->
                 <p:column styleClass="data2" headerText="brutto"  sortBy="#{wpis.bruttoFakturaView}" filterBy="#{wpis.bruttoFakturaView}" filterMatchMode="contains"   width="70" >
                     <bcf:outputpl value="#{wpis.bruttoFakturaView}"/>
                     <h:outputText value=" #{wpis.walutafaktury}" rendered="#{wpis.walutafaktury ne 'PLN'}"/>
@@ -139,20 +143,20 @@
                     <h:outputText value="tak" rendered="#{wpis.idfakturaokresowa eq null}" style="color: green;"/>
                 </p:column>
                 <p:column styleClass="data3" headerText="wys." sortBy="#{wpis.wyslana}" filterBy="#{wpis.wyslana ? wpis.datawysylki : 'nie'}" filterMatchMode="contains"  
-                          style="text-align: center;"  width="40">
+                          style="text-align: center;"  width="70">
                     <h:outputText value="#{wpis.datawysylki}" rendered="#{wpis.wyslana}">
-                        <f:convertDateTime  pattern="dd-MM"/>
+                        <f:convertDateTime  pattern="yy-MM-dd"/>
                     </h:outputText>
                     <h:outputText value="nie" rendered="#{!wpis.wyslana}" style="color: green;"/>
                 </p:column>
-                <p:column styleClass="data3 hide-on-small" headerText="zaks." sortBy="#{wpis.zaksiegowana}" filterBy="#{wpis.zaksiegowana ? 'tak' : 'nie'}" filterMatchMode="contains"  
+<!--                <p:column styleClass="data3 hide-on-small" headerText="zaks." sortBy="#{wpis.zaksiegowana}" filterBy="#{wpis.zaksiegowana ? 'tak' : 'nie'}" filterMatchMode="contains"  
                           style="text-align: center;" width="30">
                     <h:outputText value="#{wpis.zaksiegowana ? 'tak' : 'nie'}"/>
                 </p:column>
                 <p:column styleClass="data3" headerText="zaks.K" sortBy="#{wpis.zaksiegowanakontrahent}" filterBy="#{wpis.zaksiegowanakontrahent ? 'tak' : 'nie'}" filterMatchMode="contains"  
                           style="text-align: center;" width="30">
                     <h:outputText value="#{wpis.zaksiegowanakontrahent ? 'tak' : 'nie'}"/>
-                </p:column>
+                </p:column>-->
                 <p:column styleClass="data1" headerText="typ" sortBy="#{wpis.rodzajdokumentu}" filterBy="#{wpis.rodzajdokumentu}" filterMatchMode="contains" 
                           style="text-align: center;" width="60">
                     <h:outputText value="#{wpis.rodzajdokumentu}" style="#{wpis.pozycjepokorekcie.size() gt 0  or wpis.gutschrift ? 'color:red;' : null}"/>
@@ -167,7 +171,7 @@
                                       icon="ui-icon-script" oncomplete="aktywujpolewyboruklientanafakturze();" />
                 </p:column>
                  <p:column styleClass="data1" headerText="sporz" sortBy="#{wpis.datasporzadzenia}" filterBy="#{wpis.datasporzadzenia}" 
-                          filterMatchMode="contains"  width="60">
+                          filterMatchMode="contains"  width="70">
                      <h:outputText value="#{wpis.datasporzadzenia}">
                           <f:convertDateTime  pattern="yyy-MM-dd HH:mm"/>
                      </h:outputText>
