--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_wzorcowy.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_plankont_wzorcowy.xhtml
@@ -17,7 +17,7 @@
                 <p:menuitem  value="Oznacz jako kosztowe" icon="ui-icon-circle-plus" actionListener="#{planKontView.oznaczkontoJakoKosztoweWzorcowy()}" update=":formwzorcowy:dataListwzorcowy"/>
                 <p:menuitem  value="Oznacz jako przychodowe" icon="ui-icon-circle-plus" actionListener="#{planKontView.oznaczkontoJakoPrzychodoweWzorcowy()}" update=":formwzorcowy:dataListwzorcowy"/>
                 <p:menuitem value="Usuń" actionListener="#{planKontView.usun('W')}" icon="ui-icon-trash" update=":formwzorcowy:dataListwzorcowy"/>
-                <p:menuitem value="Usuń wszystkie" actionListener="#{planKontView.usunieciewszystkichKontWzorcowy()}" global="false" icon="ui-icon-trash" update=":formwzorcowy"/>
+                <p:menuitem value="Usuń wszystkie" actionListener="#{planKontView.usunieciewszystkichKontWzorcowy()}" global="true" icon="ui-icon-trash" update=":formwzorcowy"/>
                 <p:separator/>
                 <p:menuitem value="Nowe porządki" actionListener="#{planKontView.implementacjaNowePorzadki()}" icon="ui-icon-trash" update=":formwzorcowy" rendered="#{facesContext.externalContext.remoteUser eq '4'}"/>
                 <p:menuitem value="Implem. konto" actionListener="#{planKontView.implementacjaJednegoKontaWzorcowego()}" icon="ui-icon-trash" update=":formwzorcowy" rendered="#{facesContext.externalContext.remoteUser eq '4'}"/>
